更新Tomcat和linux权限的一些坑